fix(gateway-admin): preserve route upgrade compatibility